--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Black+And+White+Picture|Concert+One|Dokdo|PT+Sans+Narrow|Rancho|Ubuntu');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata|Open+Sans|Quicksand');
+
 /* 
 
 font-family: 'Ubuntu', sans-serif;
@@ -10,35 +11,45 @@ font-family: 'Concert One', cursive;
 font-family: 'Rancho', cursive; 
 
 */
-body{
+
+body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
+    background: radial-gradient(#d6d6d6, #ffffff);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    overflow: hidden;
+    background: url(mac-big-sur.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.head{
+.head {
     height: fit-content;
     width: 100vw;
     background: #f5f6fa;
     padding: 12px 0;
 }
 
-.footer{
+.footer {
     background: #fff;
     height: 30vh;
     width: 100vw;
-    display:  flex;
-    align-items:  center;
-    justify-content:  space-evenly;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .header {
     height: auto;
-    padding:  0 83px;
-    display:  flex;
-    align-items:  center;
+    padding: 0 83px;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
     /* box-shadow: 1px 1px 30px -11px #8563ffa3; */
 }
+
 img.logo {
     width: 70px;
     border-radius: 100%;
@@ -46,71 +57,130 @@ img.logo {
     height: 70px;
 }
 
-.logo-holder > div {
-    display:  flex;
-    margin:  0 3px;
-    align-items:  center;
+.logo-holder>div {
+    display: flex;
+    margin: 0 3px;
+    align-items: center;
 }
 
-.logo-holder > div > div {
+.logo-holder>div>div {
     /* margin: 0 4px; */
     font-size: 29px;
     /* letter-spacing: 2px; */
 }
 
 .logo-holder {
-    display:  flex;
-    align-items:  center;
+    display: flex;
+    align-items: center;
 }
 
-.logo-holder > div > div:first-child {
+.logo-holder>div>div:first-child {
     font-weight: 500;
     font-size: 34px;
 }
 
-.logo-holder > div > div:not(:first-child) {
+.logo-holder>div>div:not(:first-child) {
     color: #8563ff;
-    font-weight:  700;
+    font-weight: 700;
     font-size: 25px;
 }
 
 .menu-holder {
-    display:  flex;
-    align-items:  center;
-    justify-content:  space-around;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.menu-holder > div {
+.menu-holder>div {
     font-size: 20px;
     font-weight: 600;
-    letter-spacing:  2px;
-    margin:  0 10px;
-    cursor:  pointer;
+    letter-spacing: 2px;
+    margin: 0 10px;
+    cursor: pointer;
     color: #585656;
 }
 
-.menu-holder > div:hover {
+.menu-holder>div:hover {
     color: #8563ff;
 }
 
-.soc-icon > div > i {
-    font-size:  66px;
+.soc-icon>div>i {
+    font-size: 66px;
     color: #2f2f2f;
-    cursor:  pointer;
+    cursor: pointer;
     transition: all 0.5s;
 }
 
-.soc-icon > div > i:hover {
+.soc-icon>div>i:hover {
     color: #734efd;
 }
 
-.soc-icon > div {
-    align-items:  center;
-    text-align:  center;
+.soc-icon>div {
+    align-items: center;
+    text-align: center;
 }
 
+.menu-holder>div.active {
+    color: #000;
+    font-weight: 700;
+}
 
-.menu-holder > div.active {
-    color:  #000;
-    font-weight:  700;
+.content {
+    width: 70vw;
+    margin: auto;
+    /* position: relative; */
+    height: 80vh;
+}
+
+.content>img {
+    width: 62vw;
+    border-radius: 10px;
+    overflow: hidden;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    box-shadow: 0 0 16px #5a5a5a7d;
+}
+
+.cont {
+    width: 30vw;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-width: 320px;
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+    background-color: rgb(160 160 160 / 43%);
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    color: #fff;
+    font-size: 1.6rem;
+    top: 30%;
+    z-index: 2;
+    font-weight: 800;
+    text-shadow: 0 0 2px #ababab;
+    margin: auto;
+    box-shadow: 0 0 20px 0 #6965654a;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.cont>div {
+    text-align: start;
+    line-height: 1.5;
+    margin: 0 2%;
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        height: auto;
+    }
 }
